--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -321,8 +321,7 @@ IF(WIN32)
   SET(PLIN_FILES mysql_config mysql_secure_installation)
   # Input files with .sh extension
 
-  SET(SH_FILES mysql_convert_table_format mysqld_multi mysqldumpslow
-    mysqlhotcopy)
+  SET(SH_FILES mysql_convert_table_format mysqld_multi mysqldumpslow)
 
   FOREACH(file ${PLIN_FILES})
     IF(NOT ${file}_COMPONENT)
@@ -354,7 +353,6 @@ ELSE()
     mysqlaccess.conf
     mysql_convert_table_format
     mysql_find_rows
-    mysqlhotcopy
     mysqldumpslow
     mysqld_multi
     mysqld_safe
