Renaming myrockshotbackup to myrocks_hotbackup
Summary: myrocks_hotbackup sounds better naming so this diff changes it.

Test Plan: mtr --suite=rocksdb_hotbackup

Reviewers: hermanlee4, jkedgar, alexyang

Reviewed By: alexyang

Subscribers: webscalesql-eng

Differential Revision: https://reviews.facebook.net/D51825

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -356,7 +356,7 @@ ELSE()
     mysqldumpslow
     mysqld_multi
     mysqld_safe
-    myrockshotbackup
+    myrocks_hotbackup
   )
   FOREACH(file ${BIN_SCRIPTS})
     IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${file}.sh)
