[Lua] Make lua build in MySQL
Summary: This diff adds / modifies cmake files to make lua build as part of MySQL.

Test Plan: MTR

Reviewers: jtolmer, santoshb, tianx

CC: webscalesql-eng

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,6 +167,7 @@ ENDIF()
 INCLUDE(character_sets)
 INCLUDE(cpu_info)
 INCLUDE(zlib)
+INCLUDE(lua)
 INCLUDE(libevent)
 INCLUDE(ssl)
 INCLUDE(readline)
@@ -438,6 +439,7 @@ ADD_SUBDIRECTORY(include)
 ADD_SUBDIRECTORY(dbug)
 ADD_SUBDIRECTORY(strings)
 ADD_SUBDIRECTORY(vio)
+ADD_SUBDIRECTORY(lua)
 ADD_SUBDIRECTORY(regex)
 ADD_SUBDIRECTORY(mysys)
 ADD_SUBDIRECTORY(mysys_ssl)
