--- a/libmysqld/CMakeLists.txt
+++ b/libmysqld/CMakeLists.txt
@@ -24,6 +24,7 @@ INCLUDE_DIRECTORIES(
   ${CMAKE_BINARY_DIR}/sql 
   ${CMAKE_SOURCE_DIR}/regex
   ${ZLIB_INCLUDE_DIR}
+  ${LUA_INCLUDE_DIR}
   ${SSL_INCLUDE_DIRS}
   ${SSL_INTERNAL_INCLUDE_DIRS}
   ${CMAKE_SOURCE_DIR}/sql/backup
@@ -99,7 +100,7 @@ ENDIF()
 
 SET(LIBS 
   dbug strings regex mysys mysys_ssl vio 
-  ${ZLIB_LIBRARY} ${SSL_LIBRARIES} 
+  ${ZLIB_LIBRARY} ${LUA_LIBRARY} ${SSL_LIBRARIES}
   ${LIBWRAP} ${LIBCRYPT} ${LIBDL}
   ${MYSQLD_STATIC_PLUGIN_LIBS}
   sql_embedded
