Adding script to transfer myrocks snapshot using WDT
Summary:
Adding script to transfer myrocks snapshot using WDT.
Myrocks snapshot transfer is currently done using tar/xbstream. WDT is much
faster than both of this and has many other features like rate limiting,
download resumption, progress reporting etc.
I measured transfer speed between a prn host and a lla host. Tar over ssh gives
about 55 MBytes/sec. xbstream is even slower. WDT can reach upto 700 MBytes/sec.
So, speed wise there is no comparison.
WDT has rate limiting support. And WDT calls sync_file_range after each disk
write, thereby not affecting disk performance. Regarding rate limiting at rack
and cluster level, we have used BTM successfully for other deployments inside
facebook for this purpose. Also, WDT transfers are encrypted with AES GCM.
Implementation details -
We use the "create-checkpoint" api of rocksdb to create a snapshot. For files in
other directories like mtr, performance_... etc we create a hard link to the
snapshot directory. I am assuming that this files are immutable. We then start a
WDT transfer with timeout of 5 minutes. If the transfer does not finish within
the timeout, it is aborted and a new snapshot is generated. Download resumption
is built into WDT. So, we don't have to remember how much we have sent already.
WDT's download resumption works for append-only files. CURRENT is the only file
in rocksdb which is not append-only. So, we remove it before every transfer to
ensure that it is resend every time.
WDT also deletes extra files left over from previous transfers. So, if a file is
no longer needed in the latest snapshot, it is removed.

Test Plan:
Added a test for myrocks snapshot transfer using WDT. I am generating
about 250Mb snapshot. Throttle speed - 10Mbps. So the transfer takes about
25sec. Checkpoint interval is 5 sec. So, we end up getting 5/6 rounds of backup
before success.

Reviewers: yoshinorim

Subscribers: ldemailly

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -1,14 +1,14 @@
 # Copyright (c) 2006, 2015, Oracle and/or its affiliates. All rights reserved.
-# 
+#
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; version 2 of the License.
-# 
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
@@ -27,7 +27,7 @@ IF(NOT WIN32 OR CMAKE_CROSSCOMPILING)
 ENDIF()
 
 IF(CAT_EXECUTABLE)
-  SET(CAT_COMMAND COMMAND 
+  SET(CAT_COMMAND COMMAND
     ${CMAKE_COMMAND} -E chdir  ${CMAKE_CURRENT_SOURCE_DIR}
     ${CAT_EXECUTABLE} mysql_system_tables.sql mysql_system_tables_fix.sql >
     ${CMAKE_CURRENT_BINARY_DIR}/mysql_fix_privilege_tables.sql
@@ -64,15 +64,15 @@ ADD_CUSTOM_TARGET(GenFixPrivs
 )
 
 IF(UNIX)
- FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/make_binary_distribution 
+ FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/make_binary_distribution
    "cd ${CMAKE_BINARY_DIR} && '${CMAKE_CPACK_COMMAND}' -G TGZ --config CPackConfig.cmake\n" )
  EXECUTE_PROCESS(
   COMMAND chmod +x ${CMAKE_CURRENT_BINARY_DIR}/make_binary_distribution
 )
 ENDIF()
 
-INSTALL(FILES 
-  ${CMAKE_CURRENT_SOURCE_DIR}/mysql_system_tables.sql 
+INSTALL(FILES
+  ${CMAKE_CURRENT_SOURCE_DIR}/mysql_system_tables.sql
   ${CMAKE_CURRENT_SOURCE_DIR}/mysql_system_tables_data.sql
   ${CMAKE_CURRENT_SOURCE_DIR}/fill_help_tables.sql
   ${CMAKE_CURRENT_SOURCE_DIR}/mysql_test_data_timezone.sql
@@ -127,18 +127,18 @@ STRING(REPLACE       "-pipe"                         "" CXXFLAGS "${CXXFLAGS}")
 IF(UNIX)
   # FIND_PROC and CHECK_PID are used by mysqld_safe
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
-  SET (FIND_PROC 
+  SET (FIND_PROC
     "ps wwwp $PID | grep -v mysqld_safe | grep -- $MYSQLD > /dev/null")
 ENDIF()
 IF(NOT FIND_PROC AND CMAKE_SYSTEM_NAME MATCHES "SunOS")
-  SET (FIND_PROC 
+  SET (FIND_PROC
     "ps -p $PID | grep -v mysqld_safe | grep -- $MYSQLD > /dev/null")
 ENDIF()
 
 IF(NOT FIND_PROC)
   # BSD style
   EXECUTE_PROCESS(COMMAND ps -uaxww OUTPUT_QUIET ERROR_QUIET RESULT_VARIABLE result)
-  IF(result MATCHES 0) 
+  IF(result MATCHES 0)
      SET( FIND_PROC
        "ps -uaxww | grep -v mysqld_safe | grep -- $MYSQLD | grep $PID > /dev/null")
   ENDIF()
@@ -151,7 +151,7 @@ IF(NOT FIND_PROC)
     SET( FIND_PROC "ps -ef | grep -v mysqld_safe | grep -- $MYSQLD | grep $PID > /dev/null")
   ENDIF()
 ENDIF()
-  
+
 EXECUTE_PROCESS(COMMAND sh -c "kill -0 $$" OUTPUT_QUIET ERROR_QUIET RESULT_VARIABLE result)
 IF(result MATCHES 0)
   SET(CHECK_PID "kill -0 $PID > /dev/null 2> /dev/null")
@@ -262,7 +262,7 @@ ELSE()
   SET(TARGET_LINUX "false")
 ENDIF()
 
-# Use cmake variables to inspect dependencies for 
+# Use cmake variables to inspect dependencies for
 # mysqlclient library (add -l stuff)
 SET(CLIENT_LIBS "")
 SET(LIBS "")
@@ -286,14 +286,14 @@ MACRO(EXTRACT_LINK_LIBRARIES target var)
       # Also, remove duplicates
       IF(NOT lib STREQUAL "general" AND NOT ${var}  MATCHES "-l${lib} ")
         IF (lib MATCHES "^\\-l")
-          SET(${var} "${${var}} ${lib} ") 
+          SET(${var} "${${var}} ${lib} ")
         ELSEIF(lib MATCHES "^/")
           # Full path, convert to just filename, strip "lib" prefix and extension
           GET_FILENAME_COMPONENT(lib "${lib}" NAME_WE)
           STRING(REGEX REPLACE "^lib" "" lib "${lib}")
-          SET(${var} "${${var}}-l${lib} " ) 
+          SET(${var} "${${var}}-l${lib} " )
         ELSE()
-          SET(${var} "${${var}}-l${lib} " ) 
+          SET(${var} "${${var}}-l${lib} " )
         ENDIF()
       ENDIF()
     ENDFOREACH()
@@ -314,7 +314,7 @@ SET(NON_THREADED_LIBS ${CLIENT_LIBS})
 SET(mysql_config_COMPONENT COMPONENT Development)
 
 IF(WIN32)
-  # On Windows, some .sh and some .pl.in files are configured 
+  # On Windows, some .sh and some .pl.in files are configured
   # The resulting files will have .pl extension (those are perl scripts)
 
   # Input files with pl.in extension
@@ -357,6 +357,7 @@ ELSE()
     mysqld_multi
     mysqld_safe
     myrocks_hotbackup
+    myrocks_wdt_hotbackup
   )
   FOREACH(file ${BIN_SCRIPTS})
     IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${file}.sh)
@@ -374,7 +375,7 @@ ELSE()
       SET(${file}_COMPONENT Server)
     ENDIF()
     INSTALL_SCRIPT(
-      ${CMAKE_CURRENT_BINARY_DIR}/${file} 
+      ${CMAKE_CURRENT_BINARY_DIR}/${file}
       DESTINATION ${INSTALL_BINDIR}
       COMPONENT ${${file}_COMPONENT}
      )
