Enable external TSan build support on Ubuntu 15.10
Summary: This diff enables TSan build support on Ubuntu 15.10. It will most likely work on older versions of Ubuntu as well, but I haven't tested on them, so being very explicit here. It is unknown if this solution works on Fedora 23 or not. Would appreciate someone trying it out.

Test Plan:
  - Build with `-DWITH_TSAN=1`.
  - Make sure that resulting build succeeds, `mysqld` starts up and displays warnings from TSan.

Reviewers: jtolmer

Reviewed By: jtolmer

Subscribers: MarkCallaghan, webscalesql-eng

Differential Revision: https://reviews.facebook.net/D56289

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -253,6 +253,10 @@ MACRO(MY_SANITIZER_CHECK SAN_OPT RESULT)
       # fPIC implies PIC version of the TSan library.
       SET(CMAKE_C_STANDARD_LIBRARIES " -ltsan_pic")
       SET(CMAKE_CXX_STANDARD_LIBRARIES " -ltsan_pic")
+    ELSEIF(WITH_TSAN)
+      # This combination is tested only on Ubuntu 15.10. YMMV on other OS-s.
+      SET(CMAKE_C_STANDARD_LIBRARIES " -static-libtsan")
+      SET(CMAKE_CXX_STANDARD_LIBRARIES " -static-libtsan")
     ENDIF()
 
     SET(${RESULT} 1)
@@ -264,10 +268,12 @@ ENDMACRO()
 OPTION(WITH_ASAN "Enable address sanitizer" OFF)
 IF(WITH_ASAN)
   MY_SANITIZER_CHECK("-fsanitize=address" WITH_ASAN_OK)
-  IF(WITH_ASAN_OK)
-    SET(HAVE_ASAN 1)
+  IF(NOT WITH_ASAN_OK)
+    MESSAGE(FATAL_ERROR "Do not know how to enable address sanitizer (ASan).")
   ELSE()
-    MESSAGE(FATAL_ERROR "Do not know how to enable address sanitizer.")
+    SET(HAVE_ASAN 1)
+    MESSAGE(WARNING
+            "Address sanitizer (ASan) support is now enabled.")
   ENDIF()
 ENDIF()
 
@@ -286,9 +292,22 @@ IF(WITH_FB_TSAN)
   MY_SANITIZER_CHECK("-fsanitize=thread -fPIC -pie" WITH_FB_TSAN_OK)
   IF(NOT WITH_FB_TSAN_OK)
     MESSAGE(FATAL_ERROR
-            "Do not know how to enable thread sanitizer.")
+            "Do not know how to enable internal thread sanitizer (TSan).")
+  ELSE()
     MESSAGE(WARNING
-            "Thread sanitizer support is now enabled.")
+            "Internal thread sanitizer (TSan) support is now enabled.")
+  ENDIF()
+ENDIF()
+
+OPTION(WITH_TSAN "Enable thread sanitizer" OFF)
+IF(WITH_TSAN)
+  MY_SANITIZER_CHECK("-fsanitize=thread" WITH_TSAN_OK)
+  IF(NOT WITH_TSAN_OK)
+    MESSAGE(FATAL_ERROR
+            "Do not know how to enable thread sanitizer (TSan).")
+  ELSE()
+    MESSAGE(WARNING
+            "Thread sanitizer (TSan) support is now enabled.")
   ENDIF()
 ENDIF()
 
@@ -297,16 +316,17 @@ IF(WITH_UBSAN)
   MY_SANITIZER_CHECK("-fsanitize=undefined" WITH_UBSAN_OK)
   IF(NOT WITH_UBSAN_OK)
     MESSAGE(FATAL_ERROR
-            "Do not know how to enable undefined behavior sanitizer.")
+            "Do not know how to enable undefined behavior sanitizer (UBSan).")
   ELSE()
     MESSAGE(WARNING
-            "Note that Undefined Behavior support is currently experimental.")
+            "Undefined behavior sanitizer (UBSan) support is now enabled.")
   ENDIF()
 ENDIF()
 
 # Paranoia.
 IF((WITH_ASAN AND WITH_FB_TSAN) OR (WITH_ASAN AND WITH_UBSAN) OR
-   (WITH_FB_TSAN AND WITH_UBSAN))
+   (WITH_FB_TSAN AND WITH_UBSAN) OR (WITH_ASAN AND WITH_TSAN) OR
+   (WITH_TSAN AND WITH_UBSAN) OR (WITH_FB_TSAN AND WITH_TSAN))
   MESSAGE(FATAL_ERROR
     "Cannot use multiple sanitizers together. Nothing good will come of it.")
 ENDIF()
@@ -315,8 +335,8 @@ OPTION(ENABLE_DEBUG_SYNC "Enable debug sync (debug builds only)" ON)
 IF(ENABLE_DEBUG_SYNC) 
   SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DENABLED_DEBUG_SYNC") 
   SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DENABLED_DEBUG_SYNC") 
-ENDIF() 
- 
+ENDIF()
+
 # Older versions of ccache must be disabled: export CCACHE_DISABLE=1
 # See http://www.cmake.org/Wiki/CTest/Coverage
 OPTION(ENABLE_GCOV "Enable gcov (debug, Linux builds only)" OFF)
