--- a/mysql-test/suite/rocksdb/my.cnf
+++ b/mysql-test/suite/rocksdb/my.cnf
@@ -5,3 +5,5 @@ sql-mode=NO_ENGINE_SUBSTITUTION
 explicit-defaults-for-timestamp=1
 rocksdb_lock_wait_timeout=1
 rocksdb_strict_collation_check=0
+log-bin=master_bin
+binlog-format=row
