Improve code style for info schema handling
Summary:

Test Plan:
myqlbuild.sh --clean
mysqltest.sh
mysqltest.sh --testset=RocksDB

Reviewers: jkedgar

Subscribers: webscalesql-eng

--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,7 @@ storage/rocksdb/ldb
 storage/rocksdb/mysql_ldb
 storage/rocksdb/sst_dump
 storage/rocksdb/unittest/test_properties_collector
+storage/rocksdb/__dev_temp
 support-files/MySQL-shared-compat.spec
 support-files/binary-configure
 support-files/my-default.cnf
